--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,15 @@ alembic==1.13.2
 annotated-types==0.7.0
 anyio==4.4.0
 bcrypt==4.0.1
+certifi==2024.7.4
 cffi==1.17.0
 click==8.1.7
 cryptography==43.0.0
 ecdsa==0.19.0
 fastapi==0.112.0
 h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
 idna==3.7
 iniconfig==2.0.0
 Mako==1.3.5
