--- a/project_3/requirements.txt
+++ b/project_3/requirements.txt
@@ -1,32 +1,172 @@
-alembic==1.13.2
-annotated-types==0.7.0
-anyio==4.4.0
-bcrypt==4.0.1
-cffi==1.17.0
-click==8.1.7
-cryptography==43.0.0
-ecdsa==0.19.0
-fastapi==0.112.0
+adal==1.2.7
+aenum==3.1.15
+annotated-types==0.6.0
+anyio==3.7.1
+appdirs==1.4.4
+appscript==1.2.5
+APScheduler==3.10.4
+arrow==1.3.0
+astroid==3.0.1
+attrs==23.1.0
+azure-core==1.29.5
+azure-storage-blob==12.19.0
+beautifulsoup4==4.12.2
+binaryornot==0.4.4
+bs4==0.0.1
+build==0.10.0
+bullet==2.2.0
+CacheControl==0.13.1
+case-conversion==2.1.0
+certifi==2023.7.22
+cffi==1.16.0
+chardet==5.2.0
+charset-normalizer==3.3.0
+cleo==2.1.0
+click==7.1.2
+clipboard==0.0.4
+cobble==0.1.3
+colorama==0.4.6
+colour==0.1.5
+cookiecutter==1.7.3
+crashtest==0.4.1
+cryptography==41.0.7
+cursor==1.3.5
+decorator==4.4.2
+dill==0.3.7
+distlib==0.3.7
+dnspython==2.4.2
+docx2pdf==0.1.8
+dulwich==0.21.6
+email-validator==2.1.0.post1
+fastapi==0.104.1
+fastapi-cli @ git+https://github.com/sxhxliang/fastapi-cli@61d5b5cf5709614c6b19476fa3f8a83ba8b3459c
+filelock==3.13.1
+Flask==2.1.1
+furl==2.1.3
+fuzzywuzzy==0.18.0
+gender-guesser==0.4.0
+grpcio==1.59.2
+grpcio-tools==1.59.2
+gunicorn==21.2.0
 h11==0.14.0
-idna==3.7
-iniconfig==2.0.0
-Mako==1.3.5
-MarkupSafe==2.1.5
-packaging==24.1
+html-text==0.5.2
+httpcore==1.0.1
+httpx==0.25.1
+idna==3.4
+imageio==2.33.0
+imageio-ffmpeg==0.4.9
+importlib-metadata==6.8.0
+infi.systray==0.1.12
+inflect==7.0.0
+installer==0.7.0
+isodate==0.6.1
+isort==5.12.0
+itsdangerous==2.1.2
+jaraco.classes==3.3.0
+Jinja2==3.1.2
+jinja2-time==0.2.0
+jsmin==3.0.1
+jsonschema==4.17.3
+keyring==24.2.0
+lunr==0.6.2
+lxml==4.9.3
+Mako==1.3.0
+mammoth==1.7.0
+Markdown==3.4.1
+MarkupSafe==2.1.3
+maybe-else==0.2.1
+mbstrdecoder==1.1.3
+mccabe==0.7.0
+more-itertools==10.1.0
+moviepy==1.0.3
+msgpack==1.0.7
+msoffcrypto-tool==5.1.1
+numpy==1.26.2
+O365==2.0.31
+oauthlib==3.2.2
+office365==0.3.15
+office365-rest-client==2.2.0
+olefile==0.47
+orderedmultidict==1.0.1
+packaging==23.2
+pandas==2.1.3
+parsedatetime==2.6
 passlib==1.7.4
-pluggy==1.5.0
+pathmagic==0.3.14
+pdoc3==0.10.0
+pexpect==4.8.0
+Pillow==10.1.0
+pipenv==2023.10.24
+pkginfo==1.9.6
+platformdirs==3.11.0
+poetry==1.6.1
+poetry-core==1.7.0
+poetry-plugin-export==1.6.0
+poyo==0.5.0
+prettierfier==1.0.3
+proglog==0.1.10
+protobuf==4.21.6
 psycopg2-binary==2.9.9
-pyasn1==0.6.0
-pycparser==2.22
-pydantic==2.8.2
-pydantic_core==2.20.1
-pytest==8.3.2
-python-jose==3.3.0
-python-multipart==0.0.9
-rsa==4.9
+ptyprocess==0.7.0
+pycparser==2.21
+pydantic==1.10.13
+pydantic_core==2.10.1
+pydub==0.25.1
+pyinstrument==4.6.1
+pyiotools==0.3.18
+PyJWT==2.8.0
+pylint==3.0.2
+pymiscutils==0.3.14
+pypandoc==1.13
+pypandoc_binary==1.13
+PyPDF2==3.0.1
+pyperclip==1.8.2
+pypng==0.20220715.0
+pyproject_hooks==1.0.0
+PyQt5==5.15.10
+PyQt5-Qt5==5.15.11
+PyQt5-sip==12.13.0
+pyrsistent==0.20.0
+pysubtypes==0.3.18
+python-dateutil==2.8.2
+python-docx==1.1.0
+python-dotenv==1.0.1
+python-multipart==0.0.6
+python-slugify==8.0.1
+pytz==2023.3.post1
+pytz-deprecation-shim==0.1.0.post0
+qrcode==7.4.2
+rapidfuzz==3.4.0
+readchar==4.0.5
+regex==2023.10.3
+requests==2.31.0
+requests-oauthlib==1.3.1
+requests-toolbelt==1.0.0
+sabledocs==0.11.670
+Send2Trash==1.8.2
+shellingham==1.5.4
+simplejson==3.19.2
 six==1.16.0
-sniffio==1.3.1
+sniffio==1.3.0
+soupsieve==2.5
 SQLAlchemy==2.0.32
-starlette==0.37.2
-typing_extensions==4.12.2
-uvicorn==0.30.5
+starlette==0.27.0
+stringcase==1.2.0
+tabulate==0.9.0
+text-unidecode==1.3
+tomlkit==0.12.1
+tqdm==4.66.1
+trove-classifiers==2023.10.18
+typepy==1.3.2
+typer==0.3.2
+types-python-dateutil==2.8.19.14
+typing_extensions==4.8.0
+tzdata==2023.3
+tzlocal==4.3.1
+urllib3==2.0.7
+uvicorn==0.23.2
+virtualenv==20.24.6
+Werkzeug==3.0.1
+xattr==0.10.1
+XlsxWriter==3.1.9
+zipp==3.17.0
